tests/dataset/tpc-ds/compiler/go/q33.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:181:10: unknown field Manu in struct literal of type v
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:182:10: unknown field Price in struct literal of type v
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:191:7: cannot use func() []v {…}() (value of type []v) as []any value in argument to append
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:209:10: unknown field Manu in struct literal of type v
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:210:10: unknown field Price in struct literal of type v
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:219:11: cannot use func() []v {…}() (value of type []v) as []any value in argument to append
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:237:10: unknown field Manu in struct literal of type v
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:238:10: unknown field Price in struct literal of type v
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:273:42: any does not satisfy constraints.Integer | constraints.Float
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:312:22: any does not satisfy constraints.Integer | constraints.Float
/tmp/TestGoCompiler_TPCDSq33358158561/001/main.go:312:22: too many errors
