tests/dataset/tpc-ds/compiler/go/q33.go
//go:build ignore

// Generated by Mochi compiler v0.10.26 on 2025-07-16T01:05:20Z

package main

import (
	"encoding/json"
	"fmt"
	"mochi/runtime/data"
	"reflect"
	"sort"
	"strings"
	"time"

	"golang.org/x/exp/constraints"
)

type Catalog_sale struct {
	Cs_item_sk         int     `json:"cs_item_sk"`
	Cs_ext_sales_price float64 `json:"cs_ext_sales_price"`
	Cs_sold_date_sk    int     `json:"cs_sold_date_sk"`
	Cs_bill_addr_sk    int     `json:"cs_bill_addr_sk"`
}

type Customer_addres struct {
	Ca_address_sk int `json:"ca_address_sk"`
	Ca_gmt_offset int `json:"ca_gmt_offset"`
}

type Date_dim struct {
	D_date_sk int `json:"d_date_sk"`
	D_year    int `json:"d_year"`
	D_moy     int `json:"d_moy"`
}

type Item struct {
	I_item_sk     int    `json:"i_item_sk"`
	I_manufact_id int    `json:"i_manufact_id"`
	I_category    string `json:"i_category"`
}

type Result struct {
	I_manufact_id any     `json:"i_manufact_id"`
	Total_sales   float64 `json:"total_sales"`
}

type Store_sale struct {
	Ss_item_sk         int     `json:"ss_item_sk"`
	Ss_ext_sales_price float64 `json:"ss_ext_sales_price"`
	Ss_sold_date_sk    int     `json:"ss_sold_date_sk"`
	Ss_addr_sk         int     `json:"ss_addr_sk"`
}

type Web_sale struct {
	Ws_item_sk         int     `json:"ws_item_sk"`
	Ws_ext_sales_price float64 `json:"ws_ext_sales_price"`
	Ws_sold_date_sk    int     `json:"ws_sold_date_sk"`
	Ws_bill_addr_sk    int     `json:"ws_bill_addr_sk"`
}

type v = Result

func expect(cond bool) {
	if !cond {
		panic("expect failed")
	}
}

func formatDuration(d time.Duration) string {
	switch {
	case d < time.Microsecond:
		return fmt.Sprintf("%dns", d.Nanoseconds())
	case d < time.Millisecond:
		return fmt.Sprintf("%.1fµs", float64(d.Microseconds()))
	case d < time.Second:
		return fmt.Sprintf("%.1fms", float64(d.Milliseconds()))
	default:
		return fmt.Sprintf("%.2fs", d.Seconds())
	}
}

func printTestStart(name string) {
	fmt.Printf("   test %-30s ...", name)
}

func printTestPass(d time.Duration) {
	fmt.Printf(" ok (%s)\n", formatDuration(d))
}

func printTestFail(err error, d time.Duration) {
	fmt.Printf(" fail %v (%s)\n", err, formatDuration(d))
}

func test_TPCDS_Q33_simplified() {
	expect(_equal(result, []v{v{
		I_manufact_id: 1,
		Total_sales:   150.0,
	}, v{
		I_manufact_id: 2,
		Total_sales:   50.0,
	}}))
}

var item []Item
var date_dim []Date_dim
var customer_address []Customer_addres
var store_sales []Store_sale
var catalog_sales []Catalog_sale
var web_sales []Web_sale
var month int
var year int
var union_sales []any
var result []Result

func main() {
	item = []Item{Item{
		I_item_sk:     1,
		I_manufact_id: 1,
		I_category:    "Books",
	}, Item{
		I_item_sk:     2,
		I_manufact_id: 2,
		I_category:    "Books",
	}}
	date_dim = []Date_dim{Date_dim{
		D_date_sk: 1,
		D_year:    2000,
		D_moy:     1,
	}}
	customer_address = []Customer_addres{Customer_addres{
		Ca_address_sk: 1,
		Ca_gmt_offset: -5,
	}, Customer_addres{
		Ca_address_sk: 2,
		Ca_gmt_offset: -5,
	}}
	store_sales = []Store_sale{Store_sale{
		Ss_item_sk:         1,
		Ss_ext_sales_price: 100.0,
		Ss_sold_date_sk:    1,
		Ss_addr_sk:         1,
	}, Store_sale{
		Ss_item_sk:         2,
		Ss_ext_sales_price: 50.0,
		Ss_sold_date_sk:    1,
		Ss_addr_sk:         2,
	}}
	catalog_sales = []Catalog_sale{Catalog_sale{
		Cs_item_sk:         1,
		Cs_ext_sales_price: 20.0,
		Cs_sold_date_sk:    1,
		Cs_bill_addr_sk:    1,
	}}
	web_sales = []Web_sale{Web_sale{
		Ws_item_sk:         1,
		Ws_ext_sales_price: 30.0,
		Ws_sold_date_sk:    1,
		Ws_bill_addr_sk:    1,
	}}
	month = 1
	year = 2000
	union_sales = append(append(func() []any {
		results := []any{}
		for _, ss := range store_sales {
			for _, d := range date_dim {
				if !(ss.Ss_sold_date_sk == d.D_date_sk) {
					continue
				}
				for _, ca := range customer_address {
					if !(ss.Ss_addr_sk == ca.Ca_address_sk) {
						continue
					}
					for _, i := range item {
						if !(ss.Ss_item_sk == i.I_item_sk) {
							continue
						}
						if (((i.I_category == "Books") && (d.D_year == year)) && (d.D_moy == month)) && (ca.Ca_gmt_offset == (-5)) {
							if (((i.I_category == "Books") && (d.D_year == year)) && (d.D_moy == month)) && (ca.Ca_gmt_offset == (-5)) {
								results = append(results, v{
									Manu:  i.I_manufact_id,
									Price: ss.Ss_ext_sales_price,
								})
							}
						}
					}
				}
			}
		}
		return results
	}(), func() []v {
		results := []v{}
		for _, cs := range catalog_sales {
			for _, d := range date_dim {
				if !(cs.Cs_sold_date_sk == d.D_date_sk) {
					continue
				}
				for _, ca := range customer_address {
					if !(cs.Cs_bill_addr_sk == ca.Ca_address_sk) {
						continue
					}
					for _, i := range item {
						if !(cs.Cs_item_sk == i.I_item_sk) {
							continue
						}
						if (((i.I_category == "Books") && (d.D_year == year)) && (d.D_moy == month)) && (ca.Ca_gmt_offset == (-5)) {
							if (((i.I_category == "Books") && (d.D_year == year)) && (d.D_moy == month)) && (ca.Ca_gmt_offset == (-5)) {
								results = append(results, v{
									Manu:  i.I_manufact_id,
									Price: cs.Cs_ext_sales_price,
								})
							}
						}
					}
				}
			}
		}
		return results
	}()...), func() []v {
		results := []v{}
		for _, ws := range web_sales {
			for _, d := range date_dim {
				if !(ws.Ws_sold_date_sk == d.D_date_sk) {
					continue
				}
				for _, ca := range customer_address {
					if !(ws.Ws_bill_addr_sk == ca.Ca_address_sk) {
						continue
					}
					for _, i := range item {
						if !(ws.Ws_item_sk == i.I_item_sk) {
							continue
						}
						if (((i.I_category == "Books") && (d.D_year == year)) && (d.D_moy == month)) && (ca.Ca_gmt_offset == (-5)) {
							if (((i.I_category == "Books") && (d.D_year == year)) && (d.D_moy == month)) && (ca.Ca_gmt_offset == (-5)) {
								results = append(results, v{
									Manu:  i.I_manufact_id,
									Price: ws.Ws_ext_sales_price,
								})
							}
						}
					}
				}
			}
		}
		return results
	}()...)
	result = func() []Result {
		groups := map[string]*data.Group{}
		order := []string{}
		for _, s := range union_sales {
			key := _getField(s, "manu")
			ks := fmt.Sprint(key)
			g, ok := groups[ks]
			if !ok {
				g = &data.Group{Key: key}
				groups[ks] = g
				order = append(order, ks)
			}
			g.Items = append(g.Items, s)
		}
		items := []*data.Group{}
		for _, ks := range order {
			items = append(items, groups[ks])
		}
		type pair struct {
			item *data.Group
			key  any
		}
		pairs := make([]pair, len(items))
		for idx, it := range items {
			g := it
			pairs[idx] = pair{item: it, key: -_sum(func() []any {
				results := []any{}
				for _, xRaw := range g.Items {
					x := xRaw.(any)
					results = append(results, _getField(x, "price"))
				}
				return results
			}())}
		}
		sort.Slice(pairs, func(i, j int) bool {
			a, b := pairs[i].key, pairs[j].key
			switch av := a.(type) {
			case int:
				switch bv := b.(type) {
				case int:
					return av < bv
				case float64:
					return float64(av) < bv
				}
			case float64:
				switch bv := b.(type) {
				case int:
					return av < float64(bv)
				case float64:
					return av < bv
				}
			case string:
				bs, _ := b.(string)
				return av < bs
			}
			return fmt.Sprint(a) < fmt.Sprint(b)
		})
		for idx, p := range pairs {
			items[idx] = p.item
		}
		results := []Result{}
		for _, g := range items {
			results = append(results, Result{
				I_manufact_id: g.Key.(any),
				Total_sales: _sum(func() []any {
					results := []any{}
					for _, xRaw := range g.Items {
						x := xRaw.(any)
						results = append(results, _getField(x, "price"))
					}
					return results
				}()),
			})
		}
		return results
	}()
	func() { b, _ := json.Marshal(result); fmt.Println(string(b)) }()
	test_TPCDS_Q33_simplified()
}

func _convertMapAny(m map[any]any) map[string]any {
	out := make(map[string]any, len(m))
	for k, v := range m {
		key := fmt.Sprint(k)
		if sub, ok := v.(map[any]any); ok {
			out[key] = _convertMapAny(sub)
		} else {
			out[key] = v
		}
	}
	return out
}

func _equal(a, b any) bool {
	av := reflect.ValueOf(a)
	bv := reflect.ValueOf(b)
	if av.Kind() == reflect.Slice && bv.Kind() == reflect.Slice {
		if av.Len() != bv.Len() {
			return false
		}
		for i := 0; i < av.Len(); i++ {
			if !_equal(av.Index(i).Interface(), bv.Index(i).Interface()) {
				return false
			}
		}
		return true
	}
	if av.Kind() == reflect.Map && bv.Kind() == reflect.Map {
		if av.Len() != bv.Len() {
			return false
		}
		for _, k := range av.MapKeys() {
			bvVal := bv.MapIndex(k)
			if !bvVal.IsValid() {
				return false
			}
			if !_equal(av.MapIndex(k).Interface(), bvVal.Interface()) {
				return false
			}
		}
		return true
	}
	if (av.Kind() == reflect.Int || av.Kind() == reflect.Int64 || av.Kind() == reflect.Float64) &&
		(bv.Kind() == reflect.Int || bv.Kind() == reflect.Int64 || bv.Kind() == reflect.Float64) {
		return av.Convert(reflect.TypeOf(float64(0))).Float() == bv.Convert(reflect.TypeOf(float64(0))).Float()
	}
	return reflect.DeepEqual(a, b)
}

func _getField(v any, name string) any {
	switch m := v.(type) {
	case map[string]any:
		return m[name]
	case map[string]string:
		if s, ok := m[name]; ok {
			return s
		}
	case map[any]any:
		return _convertMapAny(m)[name]
	default:
		rv := reflect.ValueOf(m)
		if rv.Kind() == reflect.Struct {
			rt := rv.Type()
			for i := 0; i < rv.NumField(); i++ {
				fn := rt.Field(i)
				field := fn.Name
				if tag := fn.Tag.Get("json"); tag != "" {
					if c := strings.Index(tag, ","); c >= 0 {
						tag = tag[:c]
					}
					if tag != "-" {
						field = tag
					}
				}
				if field == name {
					return rv.Field(i).Interface()
				}
			}
		}
	}
	return nil
}

func _sum[T constraints.Integer | constraints.Float](v []T) float64 {
	var sum float64
	for _, n := range v {
		sum += float64(n)
	}
	return sum
}
